--- a/apache/deployment.yaml
+++ b/apache/deployment.yaml
@@ -25,19 +25,19 @@ spec:
           limits:
             memory: "256Mi"
             cpu: "200m"
-        # livenessProbe:       # Checks if the app is still alive — if it fails repeatedly, the container will be restarted.
-        #   httpGet:
-        #     path: /
-        #     port: 8080
-        #   initialDelaySeconds: 10
-        #   periodSeconds: 10
-        #   timeoutSeconds: 2
-        #   failureThreshold: 3
-        # readinessProbe:     # Checks if the app is ready to receive traffic — if it fails, the pod is removed from the Service endpoints.
-        #   httpGet:
-        #     path: /
-        #     port: 8080
-        #   initialDelaySeconds: 5
-        #   periodSeconds: 5
-        #   timeoutSeconds: 2
-        #   failureThreshold: 3            
+        livenessProbe:       # Checks if the app is still alive — if it fails repeatedly, the container will be restarted.
+          httpGet:
+            path: /
+            port: 8080
+          initialDelaySeconds: 10
+          periodSeconds: 10
+          timeoutSeconds: 2
+          failureThreshold: 3
+        readinessProbe:     # Checks if the app is ready to receive traffic — if it fails, the pod is removed from the Service endpoints.
+          httpGet:
+            path: /
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 5
+          timeoutSeconds: 2
+          failureThreshold: 3            
