--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -21,3 +21,27 @@ spec:
     automated:
       selfHeal: true
       prune: true
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: nginx
+  namespace: argocd
+spec:
+  project: default
+
+  source:
+    repoURL: https://github.com/shiva2980/kind.git
+    targetRevision: master
+    path: nginx
+  destination:  
+    server: https://kubernetes.default.svc
+    namespace: apache
+
+  syncPolicy:
+    syncOptions: 
+    - CreateNamespace=true
+
+    automated:
+      selfHeal: true
+      prune: true      
