--- a/nginx/deployment.yaml
+++ b/nginx/deployment.yaml
@@ -26,6 +26,13 @@ spec:
           limits:
             memory: "256Mi"
             cpu: "200m"
+        volumesMounts:  # Mounting the persistent volume claim to the container.
+         - name: my-volume
+           mountPath: /usr/share/nginx/html
+      volumes:  # Defining the volume that will be used by the container.
+      - name: my-volume
+        persistentVolumeClaim:
+          claimName: local-pvc     
         livenessProbe:    # Checks if the app is still alive — if it fails repeatedly, the container will be restarted.
           httpGet:
             path: /
