--- a/nginx/deployment.yaml
+++ b/nginx/deployment.yaml
@@ -1,51 +1,51 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: nginx-deployment
-  namespace: nginx
-spec:
-  replicas: 3
-  selector:
-    matchLabels:
-      app: nginx
-  template:
-    metadata:
-      name: nginx-dep-pod
-      labels:
-        app: nginx
-    spec:
-      containers:
-      - name: nginx
-        image: nginx:latest
-        ports:
-        - containerPort: 80
-        resources:
-          requests:
-            memory: "128Mi"
-            cpu: "100m"       
-          limits:
-            memory: "256Mi"
-            cpu: "200m"
-        volumesMounts:  # Mounting the persistent volume claim to the container.
-         - name: my-volume
-           mountPath: /usr/share/nginx/html
-      volumes:  # Defining the volume that will be used by the container.
-      - name: my-volume
-        persistentVolumeClaim:
-          claimName: local-pvc     
-        livenessProbe:    # Checks if the app is still alive — if it fails repeatedly, the container will be restarted.
-          httpGet:
-            path: /
-            port: 80
-          initialDelaySeconds: 10
-          periodSeconds: 10
-          timeoutSeconds: 2
-          failureThreshold: 3
-        readinessProbe:     # Checks if the app is ready to receive traffic — if it fails, the pod is removed from the Service endpoints.
-          httpGet:  
-            path: /
-            port: 80
-          initialDelaySeconds: 5
-          periodSeconds: 5
-          timeoutSeconds: 2
-          failureThreshold: 3  
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: nginx-deployment
+#   namespace: nginx
+# spec:
+#   replicas: 3
+#   selector:
+#     matchLabels:
+#       app: nginx
+#   template:
+#     metadata:
+#       name: nginx-dep-pod
+#       labels:
+#         app: nginx
+#     spec:
+#       containers:
+#       - name: nginx
+#         image: nginx:latest
+#         ports:
+#         - containerPort: 80
+#         resources:
+#           requests:
+#             memory: "128Mi"
+#             cpu: "100m"       
+#           limits:
+#             memory: "256Mi"
+#             cpu: "200m"
+#         volumesMounts:  # Mounting the persistent volume claim to the container.
+#          - name: my-volume
+#            mountPath: /usr/share/nginx/html
+#       volumes:  # Defining the volume that will be used by the container.
+#       - name: my-volume
+#         persistentVolumeClaim:
+#           claimName: local-pvc     
+#         livenessProbe:    # Checks if the app is still alive — if it fails repeatedly, the container will be restarted.
+#           httpGet:
+#             path: /
+#             port: 80
+#           initialDelaySeconds: 10
+#           periodSeconds: 10
+#           timeoutSeconds: 2
+#           failureThreshold: 3
+#         readinessProbe:     # Checks if the app is ready to receive traffic — if it fails, the pod is removed from the Service endpoints.
+#           httpGet:  
+#             path: /
+#             port: 80
+#           initialDelaySeconds: 5
+#           periodSeconds: 5
+#           timeoutSeconds: 2
+#           failureThreshold: 3  
