--- a/nginx/deployment.yaml
+++ b/nginx/deployment.yaml
@@ -26,10 +26,10 @@ spec:
           limits:
             memory: "256Mi"
             cpu: "200m"
-        volumeMounts:  # ✅ Corrected spelling
-        - name: my-volume
-          mountPath: /usr/share/nginx/html
-        livenessProbe:
+        volumeMounts:  # Mounting the persistent volume claim to the container.
+         - name: my-volume
+           mountPath: /usr/share/nginx/html
+        livenessProbe:    # Checks if the app is still alive — if it fails repeatedly, the container will be restarted.
           httpGet:
             path: /
             port: 80
@@ -37,15 +37,15 @@ spec:
           periodSeconds: 10
           timeoutSeconds: 2
           failureThreshold: 3
-        readinessProbe:
+        readinessProbe:     # Checks if the app is ready to receive traffic — if it fails, the pod is removed from the Service endpoints.
           httpGet:  
             path: /
             port: 80
           initialDelaySeconds: 5
           periodSeconds: 5
           timeoutSeconds: 2
-          failureThreshold: 3
-      volumes:  # ✅ Moved to correct spec level (outside of containers block)
-      - name: my-volume
+          failureThreshold: 3  
+      volumes:  # Defining the persistent volume claim to be used by the pod.
+      - name: my-volume 
         persistentVolumeClaim:
-          claimName: local-pvc
+          claimName: my-pvc  # The name of the persistent volume claim to use.          
