--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -44,4 +44,28 @@ spec:
 
     automated:
       selfHeal: true
+      prune: true   
+---         
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: mysql-statefulset
+  namespace: mysql
+spec:
+  project: default
+
+  source:
+    repoURL: https://github.com/shiva2980/kind.git
+    targetRevision: master
+    path: mysql
+  destination:  
+    server: https://kubernetes.default.svc
+    namespace: apache
+
+  syncPolicy:
+    syncOptions: 
+    - CreateNamespace=true
+
+    automated:
+      selfHeal: true
       prune: true      
