--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -49,7 +49,7 @@ spec:
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: mysql-statefulset
+  name: mysql
   namespace: mysql
 spec:
   project: default
