--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -45,27 +45,27 @@ spec:
     automated:
       selfHeal: true
       prune: true   
----         
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: mysql-statefulset
-  namespace: argocd
-spec:
-  project: default
+# ---         
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: mysql-statefulset
+#   namespace: argocd
+# spec:
+#   project: default
 
-  source:
-    repoURL: https://github.com/shiva2980/kind.git
-    targetRevision: master
-    path: mysql
-  destination:  
-    server: https://kubernetes.default.svc
-    namespace: mysql
+#   source:
+#     repoURL: https://github.com/shiva2980/kind.git
+#     targetRevision: master
+#     path: mysql
+#   destination:  
+#     server: https://kubernetes.default.svc
+#     namespace: mysql
 
-  syncPolicy:
-    syncOptions: 
-    - CreateNamespace=true
+#   syncPolicy:
+#     syncOptions: 
+#     - CreateNamespace=true
 
-    automated:
-      selfHeal: true
-      prune: true      
+#     automated:
+#       selfHeal: true
+#       prune: true      
