--- a/ingress-role/ingress-role-binding.yaml
+++ b/ingress-role/ingress-role-binding.yaml
@@ -33,14 +33,19 @@ rules:
       - pods
       - secrets
       - services
+      - namespaces
+      - events
     verbs:
       - get
       - list
       - watch
   - apiGroups:
-      - networking.k8s.io
+    - networking.k8s.io
     resources:
+      - ingresses
       - ingressclasses
     verbs:
       - get
       - list  
+      - watch
+      - update
