--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -36,7 +36,7 @@ spec:
     path: nginx
   destination:  
     server: https://kubernetes.default.svc
-    namespace: apache
+    namespace: nginx
 
   syncPolicy:
     syncOptions: 
