--- a/apache/service.yaml
+++ b/apache/service.yaml
@@ -2,7 +2,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: apache-service
-  namespace: nginx
+  namespace: apache
 spec:
   selector:
     app: apache
