--- a/nginx/nginx-networking.yaml
+++ b/nginx/nginx-networking.yaml
@@ -16,22 +16,22 @@ spec:
             name: nginx-service
             port:
               number: 82
-# ---
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: apache-ingress
-#   namespace: apache        
-# spec:
-#   ingressClassName: nginx
-#   rules:      
-#   - host: apache.local
-#     http:
-#       paths: 
-#       - path: /
-#         pathType: Prefix
-#         backend:
-#           service:
-#             name: apache-service
-#             port:
-#               number: 80
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: apache-ingress
+  namespace: apache        
+spec:
+  ingressClassName: nginx
+  rules:      
+  - host: apache.local
+    http:
+      paths: 
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: apache-service
+            port:
+              number: 80
